# uselessfacts

./: ABOUT.md  CMakeLists.txt  README.md  mod.json  support.md
.github/workflows/: build.yml
src/: main.cpp
